style.css
body{
	font-family: 'Kanit', sans-serif;
	margin: 0;
}
.about-container {
	background-image: url('bg4.jpg'); 
  -webkit-background-repeat: repeat;
  -moz-background-repeat: repeat;
  -o-background-repeat: repeat;
  background-repeat: repeat;
  max-height: 100%;
  padding-bottom: 60px;
}

h1 {
	color: white;
	font-size: 50px;
	font-weight: normal;
	margin-bottom: 0;
}

h2 {
	color: white;
	font-size: 18px;
	margin-top: 0;
}

h3 {
	text-align: center;
	font-size: 28px;
	font-weight: 501;
	margin-top: 100px;
	margin-bottom: 20px;
}

h4 {
	text-align: center;
	font-size: 24px;
	font-weight: 410;
}

.bio {
	color: white;
	font-size: 14px;
}

.me {
	height: 175px;
	border-radius: 100%;
	border-style: solid;
	border-color: white;
	margin-top: 40px;
}

.about {
	max-width: 600px;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}


.grey {
	height: 3px;
	background-color: #898C8C;
	border: none;
	width: 50px;
}

.red {
	border: 0;
	height: 5px; 
  background-image: -webkit-linear-gradient(left, #f0f0f0, #E30000, #f0f0f0);
  background-image: -moz-linear-gradient(left, #f0f0f0, #E30000, #f0f0f0);
  background-image: -ms-linear-gradient(left, #f0f0f0, #E30000, #f0f0f0);
  background-image: -o-linear-gradient(left, #f0f0f0, #E30000, #f0f0f0); 
  width: 250px;
}

.box {
	float: left;
	width: 42.5%;
	margin-left: 5%;
	margin-top: 80px;
}

.clear {
	clear: both;
}

.full-width {
	width: 100%;
}

.skills-and-tools {
	max-width: 100%;
	margin: 40px auto;
}

.icons {
	text-align: center;
}

.icon {
	margin: 30px 0;
}

.skillicon {
	max-width: 100%;
	margin: 30px auto;
}

.contact-me {
	height: 350px;
	background-image: url('bg4.jpg'); 
  -webkit-background-repeat: repeat;
  -moz-background-repeat: repeat;
  -o-background-repeat: repeat;
  background-repeat: repeat;
  padding-top: 30px;
}

.contact-headline {
	color: white;
	margin-top: 40px;
}

.contact-info {
	color: white;
	font-size: 13px;
	margin-top: 30px;
}

.contact-link {
	color: white;
	font-size: 13px;
}

.nav-link {
	color: white;
	text-decoration: none;
}

.hire-me {
	border-style: solid;
	border-color: white;
}

li {
	display: inline-block;
	font-size: 12px;
	width: 100px;
	font-weight: bold;
	margin-top: 30px;
	padding-top: 8px;
	padding-bottom: 8px;
	text-align: center;
	margin-left: 30px;
}

p {
	text-align: center;
}

.soc-med {
  color: white;
  font-size: 15px;
  margin-top: 1%;
  text-decoration: none;
}

.social-media {
	text-align: center;
	margin-top: 50px;
}

#githubicon {
  color: rgb(102,43,129);
}
#googleplusicon {
  color: #d34836;
}
#linkedinicon {
  color: rgb(0,127,178);
}
#facebookicon {
  color: rgb(59,89,163);
}

